--- a/recipes/bollen.css
+++ b/recipes/bollen.css
@@ -13,7 +13,9 @@ h1{
 img{
     max-width: 100%;
     height: auto;
-    border-radius: 50%;
+    border-radius: 8px;
+    width: 30%;
+    margin-left: 33%;
 }
 
 h2{
