--- a/index.css
+++ b/index.css
@@ -8,6 +8,8 @@ h1{
     background-color: blueviolet;
     font-weight: bold;
     border-radius: 8px;
+    margin: auto;
+    width: 50%;
 
 }
 
@@ -17,6 +19,8 @@ h1{
     margin-top: 8px;
     background-color: blueviolet;
     border-radius: 8px;
+    width: 25%;
+    margin-left: 33%;
 
 }
 
